fixes to spacing and proofile.css

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -16,11 +16,11 @@
   white-space: nowrap;
   overflow: hidden;
   max-width: 219px;
-  font-family: Inter;
+  font-family: "Inter", Arial, Helvetica, sans-serif;
   font-size: 24px;
   font-weight: 900;
   line-height: 29.05px;
-
+  margin: 0;
 }
 
 .card__description {
