--- a/blocks/header.css
+++ b/blocks/header.css
@@ -4,36 +4,17 @@
   border-width: 1px;
   border-color: rgba(84,84,84,0.7);
   align-self: center;
+  width: 100%;
 }
 
-
-@media screen and (min-width: 800px) {
-  .header {
-    width: 100%;
-  }
-
-  .header__image {
-    width: 173px;
-    height: 33px;
-    padding: 45px 0 41px;
-  }
-}
-
-@media screen and (min-width: 481px) and (max-width: 799px) {
-  .header {
-    width: 100%;
-  }
-
-  .header__image {
-    width: 173px;
-    height: 33px;
-    padding: 45px 0 41px;
-  }
+.header__image {
+  width: 173px;
+  height: 33px;
+  padding: 45px 20px 41px;
 }
 
 @media screen and (max-width: 480px) {
   .header {
-    width: 100vw;
     align-items: center;
     padding: 0;
   }
@@ -41,6 +22,6 @@
   .header__image {
     width: 126px;
     height: 24px;
-    padding: 27px 148px 28px 13px;
+    padding: 27px 0px 28px 13px;
   }
 }
