--- a/blocks/page.css
+++ b/blocks/page.css
@@ -15,22 +15,13 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  padding: 0 20px;
-  overflow-x: hidden;
 }
-
-/*@media screen and (max-width: 480px) {
-  .page__content {
-    padding: 0 0 20px;
-  }
-
-  .page__section {
-    /*margin: 0 auto;*/
-  }
-}*/
 
 @media screen and (min-width: 800px){
   .page {
     margin: 0 auto;
+    padding: 0 20px;
   }
 }
+
+@media screen and (max-width)
